# hyfliers

./: .gitignore  README.md
fly_tests/: CMakeLists.txt  package.xml
fly_tests/src/: land.cpp  takeoff.cpp  upright.cpp
mav_controller/: CMakeLists.txt  packAG_HIJUEPUTA.xml  package.xml
mav_controller/src/: Aquiles_control_flight.cpp  Aquiles_ff.cpp  Aquiles_no_ual.cpp  Joystick.h  Joystick.inl  PID.cpp  PID.h  codigoaruco.cpp  main.cpp  main_dji.cpp  main_simulation.cpp
pid_tune_gui/: CMakeLists.txt  package.xml
pid_tune_gui/src/: AnalisysWindow.cpp  AnalisysWindow.h  ParamWidget.cpp  ParamWidget.h  PidTuneGui.cpp  PidTuneGui.h  main.cpp
pipe_detection/: CMakeLists.txt  package.xml
pipe_detection/launch/: aquiles_control.launch  parrot_control.launch  simulation_control.launch  test_simulate.launch
pipe_detection/scripts/: yolov2-tiny-voc.cfg
pipe_detection/src/: PipeDetector.cpp  PipeDetector.h  PlatformDetector.cpp  PlatformDetector.h  bovil_pca.cpp  contour_detector.cpp  depth.cpp  detector.cpp  simulation.cpp
pipe_detection/world/: pipe.world  pipe_cilinder.world  red_cardboard.world
state_filter/: CMakeLists.txt  package.xml
state_filter/src/: ParticleFilter.h  ParticleFilter.inl  StateFilter.h  StateFilter.inl  ekf_filter.cpp  main.cpp  particle_filter.cpp
