<?xml version="1.0"?>
<package>
  <name>mav_controller</name>
  <version>0.0.1</version>
  <description> test </description>

  <maintainer email="prs@us.es">Pablo Ramón</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>uav_abstraction_layer</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>uav_abstraction_layer</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>

  </export>
</package>
